# collatz-conjecture-visualized

./: .gitignore  CMakeLists.txt  README.md  collatz-conjecture.cpp  collatz-conjecture.h  collatz-visualization.cpp  collatz_engine.h  collatz_modes.cpp  collatz_modes.h  collatz_stats.h
.github/workflows/: release.yml
